# yths.backend-service

./: README.md  backend.service  credentials.template.json  monitor.py  nuunamnir.backend.service  pacman_post_transaction.py  pyproject.toml  redis-updates.hook  redis_debug.py  requirements.txt  subprocess_safe.py  update_count.py  visualize.py
docs/: install.md  issues.md  notes.md  tips.md
tests/: test_pacman_post_transaction.py  test_redis_debug_helpers.py  test_subprocess_safe.py  test_update_count.py
