[project]
name = "backend-service"
version = "0.1.0"
description = "A system monitor and statistics collector and visualizer."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "redis",
    "requests",
    "schedule",
    "obsws-python",
    "rich",
    "PyGObject",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
